Resolvendo erro de profissões sugeridas